# hostblocker

./: CHANGELOG.md  DEVELOPMENT.md  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  release.yml
builder/: fetch.py  main.py  process_hosts.py  write_hosts.py
config/: sources.yml
datasrc/: __init__.py  fetch.py  filters.py  mappers.py
hostblocker/: builder.py  main.py
hostblocker/functions/: __init__.py  filters.py  mappers.py
hostblocker/reader/: cache.py  fetch.py
hostblocker/writer/: __init__.py  bind.py  dnsmasq.py  hosts.py  unbound.py
tests/: test_builder.py  test_fetch.py  test_filters.py  test_functions_filters.py  test_functions_mappers.py  test_main.py  test_mappers.py  test_process_hosts.py  test_reader_cache.py  test_reader_fetch.py  test_write_hosts.py  test_writer_bind.py  test_writer_dnsmasq.py  test_writer_hosts.py  test_writer_unbound.py
tests/resources/: adblock.txt  apply.txt  header.txt  hosts.txt  list.txt  sources.yml
